Fix some alignment and spacing issues.

--- a/Immense.RemoteControl.Server/wwwroot/css/remote-control.css
+++ b/Immense.RemoteControl.Server/wwwroot/css/remote-control.css
@@ -254,7 +254,7 @@ button {
     text-align: left;
 }
 
-.text-right {
+.text-end {
     text-align: right;
 }
 
